# Repo-For-Dummies

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: example_output.md
scripts/: run.py
src/repoguide/: config.py  main.py
src/repoguide/agents/: main_agent.py  sub_agent.py
src/repoguide/tools/: github_tools.py
